# poirot

./: README.md  index.html
.github/: Doxyfile
1.0.0/: annotated.html  classPublisherNode.html  classPublisherNode__coll__graph.map  classSubscriberNode.html  classSubscriberNode__inherit__graph.md5  classpoirot_1_1Poirot-members.html  classpoirot_1_1Poirot__coll__graph.map  classpoirot_1_1Poirot__coll__graph.md5  classpoirot_1_1ScopedPoirot.html  classpoirot__recorder_1_1PoirotRecorderNode-members.html  classpoirot__recorder_1_1PoirotRecorderNode.html  classpoirot__recorder_1_1PoirotRecorderNode__coll__graph.map  classpoirot__recorder_1_1PoirotRecorderNode__coll__graph.md5  classpoirot__tui_1_1DataManager-members.html  classpoirot__tui_1_1DataManager__coll__graph.md5  classpoirot__tui_1_1TuiNode__coll__graph.map  classpoirot__tui_1_1TuiNode__coll__graph.md5  classpoirot__tui_1_1TuiNode__inherit__graph.md5  classpoirot__tui_1_1TuiRenderer.html  data__manager_8cpp__incl.map  data__manager_8hpp.html  data__manager_8hpp__dep__incl.map  data__manager_8hpp__dep__incl.md5  demo__node_8cpp__incl.map  demo__node_8cpp__incl.md5  dir_1189164cd2ff03d3318a9935a4ae934f_dep.map  dir_42515da0daa3904853950bff039d64b7_dep.map  dir_42515da0daa3904853950bff039d64b7_dep.md5  dir_430073cf94332e602ea05ee3b3e7af12.html  dir_45addc1aa5c6da331b44059a88510ff8.html  dir_46aabd97c2a93a223992f216d3ba8720_dep.md5  dir_4745369958518f4bc3f101f3f420c453_dep.map  dir_4fb12afbf106dd5ebba51e5c52a64f9d_dep.md5  dir_81f375e509f1c38d2e861b521fd3de5f_dep.md5  dir_937084384536ba378b137d708e00af68_dep.map  dir_9d620d59bed1375666d0d3fb53d59b4b.html  dir_c21963b8657bec4e68c9f405b66c0439_dep.md5  dir_def9a5c107f0ec51ebd441592eb4a7b9_dep.map  dir_def9a5c107f0ec51ebd441592eb4a7b9_dep.md5  doxygen_crawl.html  (+52 more)
1.0.1/: classPublisherNode__inherit__graph.map  classpoirot_1_1Poirot-members.html  classpoirot_1_1Poirot.html  classpoirot_1_1ScopedPoirot__coll__graph.map  data__manager_8hpp_source.html  demo__node_8cpp.html  dir_000010_000000.html  dir_42515da0daa3904853950bff039d64b7.html  dir_430073cf94332e602ea05ee3b3e7af12_dep.map  dir_430073cf94332e602ea05ee3b3e7af12_dep.md5  doxygen_crawl.html  functions_func.html  functions_l.html  functions_s.html  functions_~.html  index.html  poirot_8cpp.html  poirot_8hpp.html  poirot_8hpp_source.html  poirot__recorder__node_8cpp.html  structpoirot__tui_1_1DataPoint.html
1.0.2/: classes.html  classpoirot_1_1Poirot-members.html  classpoirot_1_1Poirot.html  dir_9d620d59bed1375666d0d3fb53d59b4b_dep.map  dir_c21963b8657bec4e68c9f405b66c0439_dep.map  dir_db44133ecd2a3e410adc7f6662adbdf6_dep.map  doxygen_crawl.html  functions_e.html  functions_func.html  functions_h.html  functions_i.html  functions_v.html  index.html  poirot_8cpp__incl.map  poirot_8cpp__incl.md5  poirot_8hpp.html  poirot_8hpp_source.html  poirot__recorder__node_8hpp_source.html  structpoirot__tui_1_1FunctionRow.html  tui__node_8hpp_source.html  tui__renderer_8hpp__dep__incl.md5
1.0.3/: classpoirot_1_1Poirot-members.html  classpoirot_1_1Poirot.html  classpoirot_1_1ScopedPoirot__coll__graph.md5  classpoirot__tui_1_1TuiNode-members.html  data__manager_8hpp_source.html  doxygen_crawl.html  functions_func.html  functions_g.html  functions_i.html  functions_m.html  functions_p.html  functions_r.html  functions_vars.html  globals_vars.html  index.html  poirot_8cpp.html  poirot_8hpp.html  poirot_8hpp_source.html  structpoirot__tui_1_1DataPoint-members.html  structpoirot__tui_1_1DataPoint.html  structpoirot__tui_1_1FunctionRow-members.html  structpoirot__tui_1_1FunctionRow__coll__graph.md5  tui__node_8cpp__incl.md5  tui__renderer_8hpp_source.html
1.0.4/: annotated.html  classes.html  classpoirot_1_1Poirot-members.html  classpoirot_1_1Poirot.html  classpoirot_1_1Poirot__coll__graph.map  classpoirot_1_1Poirot__coll__graph.md5  classpoirot_1_1ScopedPoirot.html  classpoirot_1_1ScopedPoirot__coll__graph.map  classpoirot_1_1ScopedPoirot__coll__graph.md5  classpoirot_1_1utils_1_1Co2Manager-members.html  classpoirot_1_1utils_1_1Co2Manager.html  classpoirot_1_1utils_1_1EnergyMonitor-members.html  classpoirot_1_1utils_1_1EnergyMonitor.html  classpoirot_1_1utils_1_1EnergyMonitor__coll__graph.map  classpoirot_1_1utils_1_1EnergyMonitor__coll__graph.md5  classpoirot_1_1utils_1_1PowerEstimator-members.html  classpoirot_1_1utils_1_1PowerEstimator.html  classpoirot_1_1utils_1_1ProcessMetrics-members.html  classpoirot_1_1utils_1_1ProcessMetrics.html  classpoirot_1_1utils_1_1StringUtils.html  (+116 more)
poirot/: CMakeLists.txt  package.xml
poirot/include/poirot/: poirot.hpp
poirot/include/poirot/utils/: co2_manager.hpp  energy_monitor.hpp  gpu_monitor.hpp  hwmon_scanner.hpp  power_estimator.hpp  process_metrics.hpp  rapl_monitor.hpp  string.hpp  string_utils.hpp  sysfs_reader.hpp  system_info_reader.hpp  thread_metrics.hpp
poirot/poirot/: __init__.py  poirot.py
poirot/poirot/utils/: __init__.py  co2_manager.py  energy_monitor.py  gpu_monitor.py  hwmon_scanner.py  power_estimator.py  process_metrics.py  rapl_monitor.py  string_utils.py  sysfs_reader.py  system_info_reader.py  thread_metrics.py
poirot/src/: poirot.cpp
poirot/src/utils/: co2_manager.cpp  energy_monitor.cpp  gpu_monitor.cpp  hwmon_scanner.cpp  power_estimator.cpp  process_metrics.cpp  rapl_monitor.cpp  string.cpp  string_utils.cpp  sysfs_reader.cpp  system_info_reader.cpp  thread_metrics.cpp
poirot_demos/: CMakeLists.txt  package.xml
poirot_demos/poirot_demos/: __init__.py  demo_node.py
poirot_demos/src/: demo_node.cpp
poirot_msgs/: CMakeLists.txt  package.xml
poirot_msgs/msg/: Co2Info.msg  CpuInfo.msg  Data.msg  FunctionCall.msg  FunctionStats.msg  GpuInfo.msg  ProcessInfo.msg  ProfilingData.msg  SystemInfo.msg
poirot_recorder/: CMakeLists.txt  package.xml
poirot_recorder/include/poirot_recorder/: poirot_recorder_node.hpp
poirot_recorder/src/: poirot_recorder_node.cpp
poirot_tui/: CMakeLists.txt  package.xml
poirot_tui/include/poirot_tui/: data_manager.hpp  tui_node.hpp  tui_renderer.hpp
poirot_tui/src/: data_manager.cpp  main.cpp  tui_node.cpp  tui_renderer.cpp
(+1250 files in other folders)
