<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>poirot</name>
  <version>1.1.1</version>
  <description>ROS 2 profiling tool for functions</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>poirot_msgs</depend>
  <depend>curl</depend>
  <build_depend>ros_environment</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>