<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>poirot_recorder</name>
  <version>1.0.1</version>
  <description>ROS 2 package for recording Poirot profiling data to CSV files</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>poirot_msgs</depend>
  <build_depend>ros_environment</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>