<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>poirot_tui</name>
    <version>0.0.1</version>
    <description>ROS 2 TUI for visualizing profiling data from poirot</description>
    <maintainer email="miguel@example.com">Miguel</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>poirot_msgs</depend>
    <build_depend>libncurses-dev</build_depend>
    <exec_depend>libncurses5</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>