<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>poirot_tui</name>
    <version>2.1.0</version>
    <description>ROS 2 TUI for visualizing profiling data from poirot</description>
    <maintainer email="miguel@example.com">Miguel</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>poirot_msgs</depend>
    <build_depend>libncurses-dev</build_depend>
    <build_depend>ros_environment</build_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>